--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Salim Global Academy  - Login</title>
+  <title>Salim Global Integrated Academy - Login</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
  
   <style>
@@ -138,7 +138,7 @@ footer small {
 </head>
 <body>
   <header>
-    <img src="logo.jpg" alt="School Logo" />
+    <img src="InShot_20250510_094231717.jpg" alt="School Logo" />
     <h1>Salim Global Integrated Academy Maiduguri</h1>
   </header>
 
