--- a/admin/admin.html
+++ b/admin/admin.html
@@ -230,7 +230,7 @@
       const analytics = getAnalytics(app);
       const auth = getAuth(app);
     const db = getFirestore(app);
-const schoolId= "capital";
+const schoolId= "salim";
   const terms = ["first term", "second term", "third term"];
   
    var sessions = [];
