--- a/admin/section.html
+++ b/admin/section.html
@@ -146,7 +146,7 @@ display: inline-block;
 };
   
   
-  const schoolId="capital";
+  const schoolId="salim";
       const app = initializeApp(firebaseConfig);
       const analytics = getAnalytics(app);
       const auth = getAuth(app);
