--- a/admin/admin.html
+++ b/admin/admin.html
@@ -385,7 +385,7 @@ const schoolId= "capital";
       code.innerHTML = generate4N();
     }
   signout.onclick = e=>{
-    window.location.href = "../signin.html";
+    window.location.href = "../index.html";
   }
   
   
