--- a/changePsw.html
+++ b/changePsw.html
@@ -251,7 +251,7 @@ footer small {
       const analytics = getAnalytics(app);
       const auth = getAuth(app);
     const db = getFirestore(app);
-const schoolId= "school";
+const schoolId= "salim";
 
  // let text = "mbhg@teaa.hhh"
   let reg = /@.*/
