--- a/signin.html
+++ b/signin.html
@@ -174,7 +174,7 @@ footer small {
   measurementId: "G-3MGCDH4FRF"
 };
  
-  const schoolId = "school";
+  const schoolId = "salim";
     const app = initializeApp(firebaseConfig);
       const analytics = getAnalytics(app);
       const auth = getAuth(app);
