--- a/signin.html
+++ b/signin.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>School - Login</title>
+  <title>Salim - Login</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
  
   <style>
@@ -143,7 +143,7 @@ footer small {
  
   <header>
     <img src="logo.jpg" alt="School Logo" />
-    <h1>Maiduguri Capital School</h1>
+    <h1>Salim Integrated Global Academy Maiduguri</h1>
   </header>
    <main>
   <div class="card">
