--- a/teacher/stdAttendance.html
+++ b/teacher/stdAttendance.html
@@ -140,7 +140,7 @@ display: inline-block;
       const auth = getAuth(app);
     const db = getFirestore(app);
   
-  const schoolId = "school";
+  const schoolId = "salim";
     let sessionsRef = doc(db, schoolId, "sessions");
 let teachersRef = doc(db, schoolId, "teachers");
   let teachersDoc = await getDoc(teachersRef);
