--- a/teacher/index.html
+++ b/teacher/index.html
@@ -272,7 +272,8 @@
   //time.innerHTML = `${h} : {}{
   date.innerHTML = `${day}/${month}/${year}`;
 
-  const schoolId = "school";
+  const schoolId = "salim";
+    
     let sessionsRef = doc(db, schoolId, "sessions");
 let teachersRef = doc(db, schoolId, "teachers");
   let teachersDoc = await getDoc(teachersRef);
