--- a/teacher/load/scoreSheet.html
+++ b/teacher/load/scoreSheet.html
@@ -131,7 +131,7 @@
       const auth = getAuth(app);
     const db = getFirestore(app);
 
-  const schoolId = "school";
+  const schoolId = "salim";
   const terms = ["first term", "second term", "third term"];
   
   
