--- a/teacher/load/teachAndSign.html
+++ b/teacher/load/teachAndSign.html
@@ -164,7 +164,7 @@
       const auth = getAuth(app);
     const db = getFirestore(app);
 
-  const schoolId = "school";
+  const schoolId = "salim";
   const terms = ["first term", "second term", "third term"];
   
   
