--- a/admin/formMaster.html
+++ b/admin/formMaster.html
@@ -201,7 +201,7 @@ details ol li::before {
   measurementId: "G-3MGCDH4FRF"
 };
   
-  const schoolId = "school";
+  const schoolId = "salim";
       const app = initializeApp(firebaseConfig);
       const analytics = getAnalytics(app);
       const auth = getAuth(app);
