--- a/admin/manageAdmins.html
+++ b/admin/manageAdmins.html
@@ -187,7 +187,7 @@
       const auth = getAuth(app);
     const db = getFirestore(app);
   
-  const schoolId = "school";
+  const schoolId = "salim";
   let teacherDoc = await getDoc(doc(db, schoolId, "teachers"));
   let teachers = teacherDoc.exists()? teacherDoc.data() : {};
   let sectionDoc = await getDoc(doc(db, schoolId, "section"));
