--- a/admin/reportCards.html
+++ b/admin/reportCards.html
@@ -48,7 +48,7 @@ const firebaseConfig = {
       const auth = getAuth(app);
     const db = getFirestore(app);
 
-  const schoolId = "school";
+  const schoolId = "salim";
   const schoolName = "Base School Maiduguri"
   class StdList extends Array {
   constructor() {
