--- a/admin/reportOverview.html
+++ b/admin/reportOverview.html
@@ -171,7 +171,7 @@ text-align: center;
       const auth = getAuth(app);
     const db = getFirestore(app);
 
-  const schoolId = "school";
+  const schoolId = "salim";
   class StdList extends Array {
   constructor() {
     super();
