--- a/admin/session.html
+++ b/admin/session.html
@@ -167,7 +167,7 @@
   measurementId: "G-3MGCDH4FRF"
 };
  
- const schoolId = "school";
+ const schoolId = "salim";
       const app = initializeApp(firebaseConfig);
       const analytics = getAnalytics(app);
       const auth = getAuth(app);
