--- a/admin/students.html
+++ b/admin/students.html
@@ -117,7 +117,7 @@
 };
     
     
-    const schoolId = "school";
+    const schoolId = "salim";
       const app = initializeApp(firebaseConfig);
       const analytics = getAnalytics(app);
       const auth = getAuth(app);
