--- a/admin/subjects.html
+++ b/admin/subjects.html
@@ -157,7 +157,7 @@ button.delete:hover {
   measurementId: "G-3MGCDH4FRF"
 };
   
-  const schoolId = "school";
+  const schoolId = "salim";
       const app = initializeApp(firebaseConfig);
       const analytics = getAnalytics(app);
       const auth = getAuth(app);
