--- a/admin/teachAndLog.html
+++ b/admin/teachAndLog.html
@@ -150,7 +150,7 @@ li {
       const auth = getAuth(app);
     const db = getFirestore(app);
   
-let schoolId = "school";
+let schoolId = "salim";
     let sessionsRef = doc(db, schoolId, "sessions");
 let teachersRef = doc(db, schoolId, "teachers");
   let teachersDoc = await getDoc(teachersRef);
