--- a/admin/teachers.html
+++ b/admin/teachers.html
@@ -276,7 +276,7 @@ button.delete:hover {
 };
   
   
-  const schoolId = "school";
+  const schoolId = "salim";
       const app = initializeApp(firebaseConfig);
       const analytics = getAnalytics(app);
       const auth = getAuth(app);
