--- a/signin.html
+++ b/signin.html
@@ -143,7 +143,7 @@ footer small {
  
   <header>
     <img src="logo.jpg" alt="School Logo" />
-    <h1>Salim Integrated Global Academy Maiduguri</h1>
+    <h1>Salim Global Integrated Academy Maiduguri</h1>
   </header>
    <main>
   <div class="card">
