--- a/admin/admin.html
+++ b/admin/admin.html
@@ -327,6 +327,9 @@
 
   </div>
 </main>
+  <script>
+    
+  </script>
    <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-app.js";
   import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-analytics.js";
@@ -379,6 +382,7 @@ const adminFunctions = [
     "monTAS",
     "monSA"
   ];
+     
   
 adminFunctions.forEach(fx=>{
   let elm = document.querySelector("."+fx);
