--- a/teacher/load/scoreSheet.html
+++ b/teacher/load/scoreSheet.html
@@ -227,6 +227,7 @@
          totalElm.innerHTML = total;
            student.subjects[subjK][termIndex].test = test;;
            student.subjects[subjK][termIndex].exam = exam;
+           student.subjects[subjK][termIndex].name = subj;
        }
        });
          
