--- a/admin/reportCards.html
+++ b/admin/reportCards.html
@@ -49,7 +49,7 @@ const firebaseConfig = {
     const db = getFirestore(app);
 
   const schoolId = "salim";
-  const schoolName = "Base School Maiduguri"
+  const schoolName = "Salim Global Integrated Academy Maiduguri"
   class StdList extends Array {
   constructor() {
     super();
