--- a/admin/reportCards.html
+++ b/admin/reportCards.html
@@ -195,7 +195,7 @@ let sectionRef = doc(db, schoolId, "section");
       reportCard.innerHTML = `
       <caption>
       <h2>${schoolName}</h2>
-      <img class="logo" src="../logo.jpeg">
+      <img class="logo" src="../../logo.jpg">
       <h3>Terminal Report</h3>
       Name of Student: ${std.name} <br>
       Sex: ${std.gender}<br>
