--- a/teacher/index.html
+++ b/teacher/index.html
@@ -86,20 +86,7 @@
   }
   
   
-  #signout {
-   // background-color: #f44336; /* Red */
-    color: white;
-    border: none;
-    padding: 14px 20px;
-    font-size: 16px;
-    top:0;
-    border-radius: 8px;
-    cursor: pointer;
-    //float: right;
- 
-    transition: background-color 0.3s ease, transform 0.2s ease;
-    
-  }
+  
   
   
     #signout:hover {
@@ -194,7 +181,7 @@
   color: #4db6ac;
 }
 
-#signout {
+#signout,  #switch {
   cursor: pointer;
   padding: 10px 20px;
     background-color: #4caf50;
@@ -217,6 +204,7 @@
             <button id="close">X</button> Menu
             <hr>
             <ul>
+              <li id="switch">Switch <span>Account</span></li>
               <li id="signout">Logout <span id="username"></span></li>
               <li><a href="../changePsw.html">Change password </a></li>
             </ul>
@@ -273,7 +261,7 @@
   date.innerHTML = `${day}/${month}/${year}`;
 
   const schoolId = "salim";
-    
+  
     let sessionsRef = doc(db, schoolId, "sessions");
 let teachersRef = doc(db, schoolId, "teachers");
   let teachersDoc = await getDoc(teachersRef);
@@ -371,6 +359,10 @@ let teachersRef = doc(db, schoolId, "teachers");
       window.location.href = "../signin.html";
     }
   })
+  
+  document.getElementById("switch").onclick = e=> {
+      window.location.href = "../admin/admin.html";
+    }
   </script>
 </body>
 </html>
