--- a/admin/admin.html
+++ b/admin/admin.html
@@ -227,6 +227,12 @@
     transition: background 0.3s ease;
 
 }
+  
+  #signout1 {
+    background: none;
+    border: 0.5px solid white;
+    border-radius: 4px;
+  }
 </style>
 
 
