--- a/teacher/index.html
+++ b/teacher/index.html
@@ -206,13 +206,19 @@
     margin-top: 10px;
     transition: background 0.3s ease;
   }
+  
+  #signout1 {
+    background: none;
+    border: 0.5px solid white;
+    border-radius: 4px;
+  }
 
 </style>
 
 </head>
 <body>
   <header>
-    <button id="signout1">Logout</button>
+    <button id="signout1">Log out</button>
 
     <button id="menu">&#9776;</button>
      <div class="menu-container">
