--- a/admin/teachers.html
+++ b/admin/teachers.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
@@ -141,7 +141,7 @@ button.delete:hover {
   border-radius: 10px;
   padding: 2rem;
   background: #fff;
-  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 10px 25px rgba( 0, 0, 0, 0.2);
   min-width: 300px;
   max-width: 90%;
 }
@@ -453,7 +453,7 @@ button.delete:hover {
       let username = teacher.username;
       row.innerHTML = `
        
-          <td><input type="text" disabled class="name" value="${name}" name="name" placeholder="Name"></td>
+          <td><input type="text" class="name" value="${name}" name="name" placeholder="Name"></td>
        <td class="subject">
           <table class="cell-table">
               <tr>
