--- a/admin/admin.html
+++ b/admin/admin.html
@@ -324,10 +324,10 @@
       
     </div>
 
-    <div class="card">
+    <!--div class="card">
       <h2>Parents</h2>
       <p>(Coming soon)</p>
-    </div>
+    </div-->
 
   </div>
 </main>
