--- a/admin/reportCards.html
+++ b/admin/reportCards.html
@@ -408,6 +408,13 @@ text-align: center;
       border-radius: 5px;
       font-size: 1rem;
   }
+
+  @media print {
+    hr {
+      page-break-after: always;
+    }
+    
+  }
   </style>
 </body>
 </html>
