--- a/admin/reportCards.html
+++ b/admin/reportCards.html
@@ -279,7 +279,10 @@ container.append(hr, wrapper);
   
   
   
-  print.onclick = e=>window.print();
+  print.onclick = e=>{
+    alert();
+    window.print();
+  }
   
   </script>
   
