--- a/admin/reportCards.html
+++ b/admin/reportCards.html
@@ -29,7 +29,7 @@
   
 
   <div class="no-print">
-    <button id="print">Download</button>
+    <button id="print" onclick="window.print()">Download</button>
   </div>
    <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-app.js";
@@ -279,10 +279,10 @@ container.append(hr, wrapper);
   
   
   
-  print.onclick = e=>{
+/*  print.onclick = e=>{
     alert();
     window.print();
-  }
+  }*/
   
   </script>
   
