--- a/admin/reportCards.html
+++ b/admin/reportCards.html
@@ -423,6 +423,9 @@ text-align: center;
     .no-print {
       display: none;
     }
+    .table-container {
+      margin: auto;
+    }
   }
   </style>
 </body>
