--- a/admin/reportCards.html
+++ b/admin/reportCards.html
@@ -423,9 +423,10 @@ text-align: center;
     .no-print {
       display: none;
     }
-    .table-container {
+    .table-container, .table-container > *{
       margin: auto;
     }
+    .table-container > * {}
   }
   </style>
 </body>
