--- a/admin/reportCards.html
+++ b/admin/reportCards.html
@@ -427,6 +427,10 @@ text-align: center;
       margin: auto;
     }
     .table-container > * {}
+
+    .logo {
+      border-radius: 0%;
+    }
   }
   </style>
 </body>
