--- a/admin/admin.html
+++ b/admin/admin.html
@@ -326,19 +326,20 @@
     <div class="card admins">
       <h2>Manage Admins</h2>
       <a href="manageAdmins.html">Admin Settings</a>
-      
     </div>
+      
+    <!--/div>
       <div class="card">
       <h2>Fees Management</h2>
       <p>[Work in Progress (20%)]</p>
-    </div>
+    </div-->
 
-    <div class="card">
+    <!--div class="card">
       <h2>Parents</h2>
       <p>(Coming soon)</p>
-    </div>
+    </div-->
 
-  </div>
+  
 </main>
    <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-app.js";
