--- a/teacher/index.html
+++ b/teacher/index.html
@@ -213,11 +213,18 @@
     border-radius: 4px;
   }
 
+    hr {
+    border: 0;
+    height: 4px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(200, 200, 200, 0.75), rgba(0, 0, 0, 0));
+    }
+
 </style>
 
 </head>
 <body>
   <header>
+    <hr>
     <button id="signout1">Log out</button>
 
     <button id="menu">&#9776;</button>
@@ -233,17 +240,14 @@
         </div>
     <div id="session">session/term not initialized</div>
     <div id="date"></div>
+    <hr>
   </header>
   <h1>
    Good Teacher  
   </h1>
   <div class="load-container">
     <h2>Academic Load</h2>
-    <!--div class="load">Math SS2</div>
-    <div class="load">Computer Primary 1</div>
-    <div class="load">Computer Primary 2</div>
-    <div class="load">Computer Primary 3</div>
-    <div class="load">Computer Primary 4</div-->
+      
   </div>
   <div class="register-container">
     <h2>E-register</h2>
