--- a/teacher/index.html
+++ b/teacher/index.html
@@ -150,12 +150,12 @@
   cursor: pointer;
 }
 
-.menu-container hr {
+/*.menu-container hr {
   border: 0;
   height: 1px;
   background:  #444;
   margin: 10px 0;
-}
+}*/
 
 .menu-container ul {
   list-style: none;
@@ -211,6 +211,7 @@
     background: none;
     border: 0.5px solid white;
     border-radius: 4px;
+    border-bottom: none;
   }
 
     hr {
