--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="asset/favicon-180x180.png">
   <link rel="icon" type="image/png" sizes="32x32" href="asset/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="asset/favicon-16x16.png">
-  <link rel="manifest" href="asset/site.webmanifest">
+  <link rel="manifest" href="asset/manifest.json">
   <link rel="mask-icon" href="asset/favicon-512x512.png" color="#ffffff">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="asset/mstile-150x150.png">
