--- a/index.html
+++ b/index.html
@@ -70,6 +70,15 @@
       transform: scale(0.98);
     }
   </style>
+  
+  <script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('/service-worker.js')
+      .then(reg => console.log('Service Worker registered.', reg))
+      .catch(err => console.error('Service Worker registration failed:', err));
+  }
+  </script>
+  
 </head>
 <body>
 
