--- a/admin/admin.html
+++ b/admin/admin.html
@@ -26,7 +26,7 @@
   //  display: flex;
     justify-content: space-between;
     align-items: center;
-    background: #3f51b5;
+    background: #0078D7;
     color: #fff;
     padding: 15px 20px;
     //border-radius: 10px;
