--- a/teacher/load/scoreSheet.html
+++ b/teacher/load/scoreSheet.html
@@ -116,7 +116,7 @@
   <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-app.js";
   import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-analytics.js";
-  import {getFirestore, doc, setDoc, getDoc} from "https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore.js";
+  import {getFirestore, runTransaction, doc, setDoc, getDoc} from "https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore.js";
   import {getAuth, signOut, onAuthStateChanged} from "https://www.gstatic.com/firebasejs/10.4.0/firebase-auth.js";
      // import {getDatabase, set, ref, onValue, child, get } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-database.js";
       const firebaseConfig = {
@@ -324,8 +324,18 @@ async function  saveScores(){
  
   
  let stdsRef = doc(db, schoolId, session, clas, "students");
- 
-  await setDoc(stdsRef, students);
+  
+ await runTransaction(db, async (transaction)=>{
+    let stdsDoc = await transaction.get(stdsRef);
+   let stds = stdsDoc.data();
+   for (const id in stds){
+       stds[id].subjects[subjK] = students[id].subjects[subjK]
+   }
+  // return;
+    await transaction.set(stdsRef, stds);
+    alert("saved!");
+  })
+  //await setDoc(stdsRef, students);
  // alert("save!");
   }
   
