--- a/admin/teachers.html
+++ b/admin/teachers.html
@@ -342,10 +342,10 @@ button.delete:hover {
       addField(teacher);
       console.log(JSON.stringify(teachers[username].load))
       let loadSelect = document.querySelector(`select[data-username="${username}"]`);
-      loadSelect.onchange = e=>{
+     /* loadSelect.onchange = e=>{
         console.log(e.target.value);
         
-      }
+      }*/
     }
   }
   
