--- a/signin.html
+++ b/signin.html
@@ -179,7 +179,8 @@ footer small {
       const analytics = getAnalytics(app);
       const auth = getAuth(app);
    
-
+alert("Upgrade propagating...");
+      throw "forced error";
     function onLoginSuccess(user, role) {
       //alert("Login successful! Welcome, " + user.email);
       if (role=="admin"){
