--- a/signin.html
+++ b/signin.html
@@ -179,8 +179,8 @@ footer small {
       const analytics = getAnalytics(app);
       const auth = getAuth(app);
    
-alert("Upgrade propagating...");
-      throw "forced error";
+//alert("Upgrade propagating...");
+  
     function onLoginSuccess(user, role) {
       //alert("Login successful! Welcome, " + user.email);
       if (role=="admin"){
